@@ -1,6 +1,7 @@
 Version 1.1.9 (released ??-???-????)
 
   * performance improvement: vcauth universal read access determinations
+  * performance improvement: svn revision info cache
   * make revision log "extra pages" count configurable
   * fix Subversion 1.4.x revision log compatibility code regression
   * display sanitized error when authzfile is malformed
